# GoogleCloudPlatform-_-agentsmithy

./: .gitignore  README.md  RELEASES.md  build.py  license_check.sh
.github/workflows/: .github-ci.yml
Agent_Templates/ChatbotUI/: README.md  angular.json
Agent_Templates/ChatbotUI/deployment/cd/: dev.yaml
Agent_Templates/ChatbotUI/src/: index.html  main.ts
Agent_Templates/ChatbotUI/src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.spec.ts  app.module.ts
Agent_Templates/ChatbotUI/src/environments/: environment.ts
Agent_Templates/Runtime_env/: CONTRIBUTING.md  Dockerfile  Makefile  deploy_combos.py  pyproject.toml
Agent_Templates/Runtime_env/app/: chain.py  re_deploy_test.py  server.py  test.py
Agent_Templates/Runtime_env/app/industries/: health.py
Agent_Templates/Runtime_env/app/orchestration/: __init__.py  agent.py  config.py  constants.py  enums.py  server_utils.py  tools.py  utils.py
Agent_Templates/Runtime_env/app/utils/: export_requirements.py  input_types.py  (+2 more)
Agent_Templates/Runtime_env/notebooks/: getting_started.ipynb
Agent_Templates/Runtime_env/tests/: sanity.sh
Agent_Templates/Runtime_envs/Cloud_Run/: .gitignore  Dockerfile  Makefile  README.md  RELEASES.md  pyproject.toml
ChatbotUI/: Dockerfile  README.md  package-lock.json  package.json
ChatbotUI/deployment/cd/: dev.yaml
ChatbotUI/src/: index.html  styles.scss
ChatbotUI/src/app/: app-routing.module.ts  app.component.ts  app.module.ts
ChatbotUI/src/environments/: environment.ts
Runtime_env/: .dockerignore  Dockerfile  Makefile  README.md  RELEASES.md  download_wheels.py  next_deploy_combos.py  pyproject.toml
Runtime_env/app/: README.md  re_deploy_test.py  server.py
Runtime_env/app/orchestration/: __init__.py  agent.py  config.py  constants.py  enums.py  server_utils.py  tools.py
Runtime_env/app/rag/: retriever.py  templates.py
Runtime_env/app/utils/: decorators.py  input_types.py  output_types.py  tracing.py  utils.py
Runtime_env/deployment/: README.md
Runtime_env/deployment/cd/: dev.yaml
Runtime_env/deployment/config/: dev.yaml
Runtime_env/deployment/terraform/: apis.tf  artifact_registry.tf  cloud_run.tf  counter.tf  iam.tf  locals.tf  service_accounts.tf  storage.tf  variables.tf
Runtime_env/deployment/terraform/vars/: env.tfvars
Runtime_env/tests/: sanity.sh
Runtime_env/tests/unit/: test_server.py
Runtime_env/tests/unit/test_utils/: test_tracing_exporter.py
assets/scripts/: setup.py
kioskUI/: README.md  angular.json  firebase.json  package-lock.json  package.json
kioskUI/src/: index.html  styles.scss
kioskUI/src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.module.ts
kioskUI/src/environments/: contants.ts  environment.development.ts  environment.ts
(+167 files in other folders)
